test/langtools/tools/javac/valhalla/values/CheckMakeDefault.out
CheckMakeDefault.java:10:38: compiler.err.value.factory.must.be.member.of.value.type
CheckMakeDefault.java:11:20: compiler.err.make.default.with.nonvalue
CheckMakeDefault.java:28:16: compiler.err.make.default.in.nonfactory
CheckMakeDefault.java:32:18: compiler.err.invalid.arguments.to.make.default
CheckMakeDefault.java:33:19: compiler.err.make.default.with.nonvalue
CheckMakeDefault.java:34:8: compiler.err.make.default.with.wrong.value.type: Point.SinnerValue
6 errors
